# xcp-ng-generic-lib

./: .clang_complete  CMakeLists.txt  README.md
cmake/: FindBfd.cmake  FindValgrind.cmake
config/: VtbxConfig.cmake.in  XCP-ngGenericConfig.cmake.in  XcpNgGenericConfig.cmake.in
include/vtbx/: algorithm.h  global.h  io.h  network.h  string.h  vtbx.h
include/xcp-ng/: generic.h
include/xcp-ng-generic/: algorithm.h  global.h  io.h  network.h  string.h  xcp-ng-generic.h
include/xcp-ng/generic/: algorithm.h  coroutine.h  endian.h  file.h  global.h  io.h  math.h  network.h  path.h  stacktrace.h  string.h
src/: config.h.in  coroutine.c  file.c  io.c  network.c  path.c  stacktrace.c  string.c
src/stacktrace/: stacktrace.c
src/stacktrace/platform/: bfd-stacktrace.c  std-stacktrace.c
